configs/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app2
  template:
    metadata:
      labels:
        app: node-app2
    spec:
      containers:
      - name: node-app2
        image: <NODE_APP_IMAGE>
        ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: node-app2
spec:
  selector:
    app: node-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
