configs/kube-job-board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-board-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-board-api
  template:
    metadata:
      labels:
        app: job-board-api
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: job-board-api
        image: 406570422574.dkr.ecr.ap-southeast-1.amazonaws.com/job-board-api:dev-ee4115f981f42d3d9470b692f82a3f56a601cce6
        ports:
          - containerPort: 5000
      imagePullSecrets:
        - name: 406570422574.dkr.ecr.ap-southeast-1.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: job-board-api
spec:
  selector:
    app: job-board-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
