configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: "/app1(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: node-app
            port:
              number: 80
      - path: "/app2(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: node-app2
            port:
              number: 80
      - path: "/job-board(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: job-board-api
            port:
              number: 80
